--- a/mystyle.css
+++ b/mystyle.css
@@ -213,7 +213,6 @@ fieldset{
     border: 2px solid #fb96ff;
     padding: 10px;
 }
-/**********My Journey *************/
 .grid-future , .grid-journey{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -233,7 +232,7 @@ fieldset{
 .grid-future h2,.grid-journey h2{
     margin: 0;
 }
-.grid-future fieldset , .grid-journey fieldset {
+.grid-future fieldset{
     width: 190%;
     height: 620px;
     float: left;
@@ -280,4 +279,50 @@ a{
 span{
     font-size: larger;
     color: #f82b2b;
+}
+/******* responsive for tablet ********/
+/******* my future and my journal  *******/
+@media (max-width: 768px){
+    .grid-future img , .grid-journey img{
+        position: relative;
+        width: 300px;
+        top: 50px;
+        left: 50%;
+    }
+    .grid-future{
+        padding: 25px;
+        padding-top: 0;
+    }
+    .grid-2{
+        display: flex; 
+        flex-direction: column;
+        clear: both;
+    }
+    .grid-future fieldset,.grid-journey fieldset{
+        height: fit-content;
+    }
+    #a2-hp h2{
+        font-size: larger;
+        border-radius: 0;
+        padding-left: 60px;
+        padding-right: 56px;
+    }
+    #a2-jn h2{
+        font-size: larger;
+        border-radius: 0;
+        padding-left: 60px;
+        padding-right: 58px;
+    }
+    #a2 h2{
+        font-size: larger;
+        border-radius: 0;
+        padding-left: 60px;
+        padding-right: 73px;
+    }
+    #a1 h2{
+        font-size: larger;
+        border-radius: 0;
+        padding-left: 62px;
+        padding-right: 69px;
+    }
 }
